PRJ_VER=0.99.7
SUMMARY=Major revised cmake-fedora
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=
[Changes]
- Release version are now defined in cmake-fedora.conf
  for easy maintenance.
- Fix the MANAGE_MESSAGE_LEVEL
- koji scratch builds are run only once before tagging.
- CVS support is removed.
- New command: koji-build-scratch for scratch build on all supported
  releases.
- New module: ManageTarget
- New function: SETTING_STRING_GET_VARIABLE
- New macro: ADD_CUSTOM_TARGET_COMMAND
- Target changed: changelog_update are now separate as:
  + changelog_prev_update: Update ChangeLog.prev
  + rpm_changelog_prev_update: Update RPM-ChangeLog.prev
- Command renamed:
  + cmake-fedora-newprj.sh to cmake-fedora-newprj
- Module renamed:
  + ManageReleaseOnFedora to ManageReleaseFedora
  + ManageMaintainerTargets to ManageUpload
  + PackSource to ManageArchive
  + PackRPM to ManageRPM
  + UseGConf to ManageGConf
  + UseDoxygen to ManageAPIDoc
- Function renamed:
  + LOAD_RELEASE_FILE to RELEASE_NOTES_READ_FILE
- Macro renamed:
  + PACK_SOURCE to PACK_SOURCE_ARCHIVE
  + USE_MOCK to RPM_MOCK_BUILD
  + USE_DOXYGEN to MANAGE_APIDOC_DOXYGEN
- Variable renamed: PACK_SOURCE_IGNORE_FILES to SOURCE_ARCHIVE_IGNORE_FILES
- RELEASE_ON_FEDORA: support new tags: "fedora" for current fedora,
  and "epel" for current epel.
- ChangeLog generation rewritten, target version_check no longer need.
- Removed target: version_check
- Variable Removed:
  FEDORA_NEXT_RELEASE
  FEDORA_NEXT_RELEASE_TAGS
  FEDORA_LATEST_RELEASE
  FEDORA_PREVIOUS_RELEASE
