@@ -106,7 +106,6 @@ IF(NOT DEFINED _MANAGE_ARCHIVE_CMAKE_)
 	    SET(SOURCE_ARCHIVE_FILE_EXTENSION "zip")
 	ENDIF(${CPACK_GENERATOR} STREQUAL "TGZ")
 
-	MESSAGE("SOURCE_ARCHIVE_IGNORE_FILES=${SOURCE_ARCHIVE_IGNORE_FILES}")
 	SET(CPACK_SOURCE_IGNORE_FILES ${SOURCE_ARCHIVE_IGNORE_FILES})
 	SET(CPACK_PACKAGE_VERSION ${PRJ_VER})
 
